--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width">
-          <title>GPIO-Blink</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>VR-SENRIGAN Device</title>
   </head>
   <body>
     <script src="https://chirimen.org/chirimen-raspi3/gc/polyfill/polyfill.js"></script>
