Send mobile orientation to Server

--- a/mobile_index.html
+++ b/mobile_index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="ja" dir="ltr">
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
-  <title>VR-SENRIGAN Web</title>
-  <script defer src="js/deviceorientation.js"></script>
-</head>
-<body>
-  <div id="debug"></div>
-</body>
+  <html lang="ja" dir="ltr">
+    <head>
+      <meta charset="UTF-8"/>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
+      <title>VR-SENRIGAN Web</title>
+      <script defer src="js/ws-client.js"></script>
+      <script defer src="js/deviceorientation.js"></script>
+    </head>
+  <body>
+    <div id="debug"></div>
+  </body>
 </html>
