--- a/index.html
+++ b/index.html
@@ -8,31 +8,7 @@
   <body>
     <script src="https://chirimen.org/chirimen-raspi3/gc/polyfill/polyfill.js"></script>
     <script src="js/i2c-grove-motor-driver.js"></script>
-    <script>
-      mainFunction();
-
-      async function mainFunction(){
-        const i2cAccess = await navigator.requestI2CAccess();
-        const port = i2cAccess.ports.get(1);
-        const motor = new SteppingMotor(port, 0x0f);
-        motor.init();
-
-        while ( true ){
-          await sleep(1000);
-          console.log('.');
-          motor.stepperRun(-500, 0).then(()=> {console.log('success')}, () =>{console.log('failed')});
-          await sleep(1000);
-          motor.stepperRun(500, 0).then(()=> {console.log('success')}, () =>{console.log('failed')});
-        }
-      }
-
-      function sleep(ms){
-        return new Promise( function(resolve) {
-          setTimeout(resolve, ms);
-        });
-      }
-    </script>
-
+    <script src="js/camera-pan.js"></script>
     <h1>Morter test</h1>
   </body>
 </html>
