--- a/index.html
+++ b/index.html
@@ -4,11 +4,41 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>VR-SENRIGAN Device</title>
+    <style type="text/css">
+      <!--
+        .video__wrap {
+          display: inline-block;
+          vertical-align: top;
+        }
+        .video__show {
+          width: 320px;
+          height: 240px;
+          border: 1px solid black;
+        }
+      -->
+    </style>
   </head>
   <body>
     <script src="https://chirimen.org/chirimen-raspi3/gc/polyfill/polyfill.js"></script>
     <script src="js/i2c-grove-motor-driver.js"></script>
     <script src="js/camera-pan.js"></script>
+    <script src="js/camera.js"></script>
     <h1>Morter test</h1>
+    <div>
+      <div class="video__wrap">
+        <video id="left_video" autoplay class="video__show"></video>
+        <div>
+          <select id="left_camera">
+          </select>
+        </div>
+      </div>
+      <div class="video__wrap">
+        <video id="right_video" autoplay class="video__show"></video>
+        <div>
+          <select id="right_camera">
+          </select>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
