--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </style>
   </head>
   <body>
-    <script src="https://chirimen.org/chirimen-raspi3/gc/polyfill/polyfill.js"></script>
+    <script src="js/polyfill.js"></script>
     <script src="js/i2c-grove-motor-driver.js"></script>
     <script src="js/camera-pan.js"></script>
     <script src="js/camera.js"></script>
