--- a/mobile_index.html
+++ b/mobile_index.html
@@ -5,6 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
       <title>VR-SENRIGAN Web</title>
       <script defer src="js/ws-client.js"></script>
+      <script defer src="js/mobile-ws.js"></script>
       <script defer src="js/deviceorientation.js"></script>
     </head>
   <body>
