--- a/raspberry_pi_index.html
+++ b/raspberry_pi_index.html
@@ -20,6 +20,7 @@
   </head>
   <body>
     <script src="js/ws-client.js"></script>
+    <script src="js/raspberry-pi-ws.js"></script>
     <script src="js/polyfill.js"></script>
     <script src="js/i2c-grove-motor-driver.js"></script>
     <script src="js/camera-pan.js"></script>
