--- a/raspberry_pi_index.html
+++ b/raspberry_pi_index.html
@@ -25,12 +25,22 @@
     <script src="js/i2c-grove-motor-driver.js"></script>
     <script src="js/camera-pan.js"></script>
     <script src="js/camera.js"></script>
+    <script type"text/javascript">
+      window.addEventListener('load', function() {
+        setVideoSource('video#left_video', 'select#left_camera');
+        setVideoSource('video#right_video', 'select#right_camera');
+      });
+    </script>
     <h1>Morter test</h1>
     <div>
       <div class="video__wrap">
         <video id="left_video" autoplay class="video__show"></video>
         <div>
           <select id="left_camera">
+            window.addEventListener('load', async function() {
+              await setVideoSource('video#left_video', 'select#left_camera');
+              await setVideoSource('video#right_video', 'select#right_camera');
+            });
           </select>
         </div>
       </div>
