Could start WebRTC!!

--- a/raspberry_pi_index.html
+++ b/raspberry_pi_index.html
@@ -32,6 +32,7 @@
       });
     </script>
     <h1>Morter test</h1>
+    <button type="button" onclick="connect();">Connect</button>
     <div>
       <div class="video__wrap">
         <video id="left_video" autoplay class="video__show"></video>
