--- a/mobile_index.html
+++ b/mobile_index.html
@@ -6,14 +6,20 @@
       <title>VR-SENRIGAN Web</title>
       <style type="text/css">
         <!--
+          body {
+            background-color: #112;
+          }
+          .videos {
+            align-content: center;
+          }
           .video__wrap {
             display: inline-block;
             vertical-align: top;
+            width: 49%;
           }
           .video__show {
-            width: 320px;
+            width: 100%;
             height: 240px;
-            border: 1px solid black;
           }
         -->
       </style>
@@ -23,7 +29,7 @@
     <script defer src="js/mobile-ws.js"></script>
     <script defer src="js/deviceorientation.js"></script>
     <div id="debug"></div>
-    <div>
+    <div class="videos">
       <div class="video__wrap">
         <video id="left_video" autoplay class="video__show"></video>
       </div>
