--- a/raspberry_pi_index.html
+++ b/raspberry_pi_index.html
@@ -6,14 +6,21 @@
     <title>VR-SENRIGAN Device</title>
     <style type="text/css">
       <!--
+        body {
+          color: #555;
+        }
         .video__wrap {
           display: inline-block;
           vertical-align: top;
         }
         .video__show {
           width: 320px;
-          height: 240px;
-          border: 1px solid black;
+          height: auto;
+        }
+        .debug__area {
+          margin-top: 50px;
+          width: 100%;
+          height: 200px;
         }
       -->
     </style>
@@ -31,10 +38,11 @@
         setVideoSource('video#right_video', 'select#right_camera');
       });
     </script>
-    <h1>Morter test</h1>
+    <h1>VR-SENRIGAN WEB</h1>
     <button type="button" onclick="connect();">Connect</button>
     <div>
       <div class="video__wrap">
+        <h2>Left camera</h2>
         <video id="left_video" autoplay class="video__show"></video>
         <div>
           <select id="left_camera">
@@ -42,11 +50,16 @@
         </div>
       </div>
       <div class="video__wrap">
+        <h2>Right camera</h2>
         <video id="right_video" autoplay class="video__show"></video>
         <div>
           <select id="right_camera">
           </select>
         </div>
+      </div>
+
+      <div>
+        <textarea id="debug_area" class="debug__area"></textarea>
       </div>
     </div>
   </body>
