Add debug print

--- a/mobile_index.html
+++ b/mobile_index.html
@@ -25,6 +25,7 @@
       </style>
     </head>
   <body>
+    <script defer src="js/logger.js"></script>
     <script defer src="js/ws-client.js"></script>
     <script defer src="js/mobile-ws.js"></script>
     <script defer src="js/deviceorientation.js"></script>
