--- a/raspberry_pi_index.html
+++ b/raspberry_pi_index.html
@@ -26,6 +26,7 @@
     </style>
   </head>
   <body>
+    <script src="js/logger.js"></script>
     <script src="js/ws-client.js"></script>
     <script src="js/raspberry-pi-ws.js"></script>
     <script src="js/polyfill.js"></script>
