--- a/raspberry_pi_index.html
+++ b/raspberry_pi_index.html
@@ -22,6 +22,12 @@
           width: 100%;
           height: 200px;
         }
+        #left_video {
+          -webkit-transform: rotate(270deg);
+        }
+        #right_video {
+          -webkit-transform: rotate(90deg);
+        }
       -->
     </style>
   </head>
