--- a/mobile_index.html
+++ b/mobile_index.html
@@ -21,6 +21,12 @@
             width: 100%;
             height: 240px;
           }
+          #left_video {
+            -webkit-transform: rotate(270deg);
+          }
+          #right_video {
+            -webkit-transform: rotate(90deg);
+          }
         -->
       </style>
     </head>
