--- a/raspberry_pi_index.html
+++ b/raspberry_pi_index.html
@@ -16,6 +16,8 @@
         .video__show {
           width: 320px;
           height: auto;
+          margin-top: 25px;
+          margin-bottom: 80px;
         }
         .debug__area {
           margin-top: 50px;
