--- a/raspberry_pi_index.html
+++ b/raspberry_pi_index.html
@@ -43,8 +43,9 @@
     <script src="js/camera.js"></script>
     <script type"text/javascript">
       window.addEventListener('load', function() {
-        setVideoSource('video#left_video', 'select#left_camera');
-        setVideoSource('video#right_video', 'select#right_camera');
+        setAudioSource('select#audio');
+        setVideoSource('video#left_video', 'select#left_camera', 'left');
+        setVideoSource('video#right_video', 'select#right_camera', 'right');
       });
     </script>
     <h1>VR-SENRIGAN WEB</h1>
@@ -64,6 +65,11 @@
           <select id="right_camera">
           </select>
         </div>
+      </div>
+
+      <div>
+        <select id="audio">
+        </select>
       </div>
 
       <div>
